<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menu_home_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/activity_home_menu_sort"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_home_sort_by_first_name"
                    android:title="@string/contact_sort_type_first_name"/>

                <item
                    android:id="@+id/menu_home_sort_by_last_name"
                    android:title="@string/contact_sort_type_last_name"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_home_search"
        android:icon="@drawable/ic_search"
        android:title="@string/activity_home_menu_search"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/menu_home_theme"
        android:icon="@drawable/ic_style"
        android:title="@string/activity_home_menu_theme"
        app:showAsAction="ifRoom"/>

</menu>