<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        >
        <ve.com.abicelis.androidcodetestalejandrobicelis.customviews.CustomTextViewTitle
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            custom:text="@string/dialog_select_image_source_title"
            />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:orientation="horizontal">

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/dialog_select_image_source_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fabSize="normal"
                    app:elevation="0dp"
                    app:backgroundTint="@color/primary"
                    android:src="@drawable/ic_fab_camera"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textColor="?primary_text"
                    android:textSize="16sp"
                    android:lines="1"
                    android:text="@string/dialog_select_image_source_camera"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/dialog_select_image_source_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fabSize="normal"
                    app:elevation="0dp"
                    app:backgroundTint="@color/primary"
                    android:src="@drawable/ic_fab_gallery"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textColor="?primary_text"
                    android:textSize="16sp"
                    android:text="@string/dialog_select_image_source_gallery"/>
            </LinearLayout>
            <View
                android:layout_width="10dp"
                android:layout_height="match_parent"/>

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingBottom="8dp"
        android:paddingEnd="8dp"
        >
        <Button
            android:id="@+id/dialog_select_image_source_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_cancel"
            android:layout_alignParentEnd="true"
            style="?attr/borderlessButtonStyle"/>
    </RelativeLayout>


</LinearLayout>