<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".ui.contactedit.ContactEditActivity"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_contact_edit_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ToolbarTheme"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        />


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:background="?darky_background"
        >



        <LinearLayout
            android:id="@+id/activity_contact_edit_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:focusableInTouchMode="true"
            >






            <!-- BASIC -->
            <ve.com.abicelis.androidcodetestalejandrobicelis.customviews.CustomTextViewTitle
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                custom:icon="@drawable/ic_person"
                custom:text="@string/activity_contact_edit_title_basic"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                >
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ve.com.abicelis.androidcodetestalejandrobicelis.customviews.CustomEditText
                        android:id="@+id/activity_contact_edit_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        custom:maxlines="1"
                        custom:hint="@string/activity_contact_edit_hint_first_name"/>

                    <ve.com.abicelis.androidcodetestalejandrobicelis.customviews.CustomEditText
                        android:id="@+id/activity_contact_edit_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        custom:maxlines="1"
                        custom:hint="@string/activity_contact_edit_hint_last_name"/>
                </LinearLayout>

                <FrameLayout
                    android:id="@+id/activity_contact_edit_image_container"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    >
                    <FrameLayout
                        android:id="@+id/activity_contact_edit_image_add"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:background="@drawable/circle_background_image">
                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:layout_gravity="center"
                            android:tint="?secondary_text"
                            android:src="@drawable/ic_add_photo"/>
                    </FrameLayout>
                    <FrameLayout
                        android:id="@+id/activity_contact_edit_image_existing_container"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone"
                        >
                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/activity_contact_edit_image_existing"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            app:civ_border_color="?highlight_background"
                            app:civ_border_width="8dp"
                            />
                        <RelativeLayout
                            android:id="@+id/activity_contact_edit_image_existing_container_delete"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="end"
                            android:background="@drawable/circle_background_primary">
                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/ic_delete"
                                />
                        </RelativeLayout>
                    </FrameLayout>

                </FrameLayout>

            </LinearLayout>

            <ve.com.abicelis.androidcodetestalejandrobicelis.customviews.CustomEditText
                android:id="@+id/activity_contact_edit_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                custom:maxlines="1"
                custom:hint="@string/activity_contact_edit_hint_dob"/>






            <!-- PHONE NUMBERS -->
            <ve.com.abicelis.androidcodetestalejandrobicelis.customviews.CustomTextViewTitle
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                custom:icon="@drawable/ic_phone"
                custom:text="@string/activity_contact_edit_title_phone_numbers"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/round_edges_background">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/activity_contact_edit_phones_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <Button
                    android:id="@+id/activity_contact_edit_phones_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="6dp"
                    android:layout_marginTop="6dp"
                    android:theme="@style/ButtonTheme"
                    android:textColor="@color/white_text"
                    android:text="@string/dialog_add"
                    />
            </LinearLayout>










            <!-- EMAILS -->
            <ve.com.abicelis.androidcodetestalejandrobicelis.customviews.CustomTextViewTitle
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                custom:icon="@drawable/ic_email"
                custom:text="@string/activity_contact_edit_title_emails"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/round_edges_background">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/activity_contact_edit_emails_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <Button
                    android:id="@+id/activity_contact_edit_emails_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="6dp"
                    android:layout_marginTop="6dp"
                    android:theme="@style/ButtonTheme"
                    android:textColor="@color/white_text"
                    android:text="@string/dialog_add"
                    />
            </LinearLayout>











            <!-- ADDRESSES -->
            <ve.com.abicelis.androidcodetestalejandrobicelis.customviews.CustomTextViewTitle
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                custom:icon="@drawable/ic_location"
                custom:text="@string/activity_contact_edit_title_addresses"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/round_edges_background">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/activity_contact_edit_addresses_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <Button
                    android:id="@+id/activity_contact_edit_addresses_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="6dp"
                    android:layout_marginTop="6dp"
                    android:theme="@style/ButtonTheme"
                    android:textColor="@color/white_text"
                    android:text="@string/dialog_add"
                    />
            </LinearLayout>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>